--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +13,12 @@ body {
   align-items: center;
   flex-direction: column;
   background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%23180d1c' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%23261431' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%23351947' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%23451e5e' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%23552277' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 h1 {
@@ -46,6 +53,7 @@ h1 {
   color: #fff;
   font-size: 18px;
   margin: 20px 0;
+  text-align: center;
 }
 .option {
   display: flex;
@@ -125,6 +133,9 @@ h1 {
   padding: 10px;
   margin-top: 20px;
   cursor: pointer;
+  font-family: inherit;
+  letter-spacing: 2px;
+  font-size: 20px;
 }
 .scoreArea button:hover {
   background-color: rgba(0, 0, 0, 0.4);
